--- a/home.html
+++ b/home.html
@@ -150,10 +150,10 @@
                 <span>About</span>
                 <br />
               </a>
-<!--               <a href="team.html" class="home-navlink01">
+               <a href="team.html" class="home-navlink01">
                 <span>Team</span>
                 <br />
-              </a> -->
+              </a> 
               <div class="home-container5">
                 <a href="https://www.blockbuster.com/" class="home-link">Contact us</a>
               </div>
